# mixeff

./: .Rbuildignore  .gitignore  .lintr  404.html  AGENTS.html  AGENTS.md  CLAUDE.html  CLAUDE.md  DESCRIPTION  LICENSE-text.html  NAMESPACE  NEWS.md  README.md  RELEASE.html  RELEASE.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  extra.js  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: as-json.R  audit.R  broom.R  changes.R  coef-names.R  compare-covariance.R  compare.R  compile.R  conditions.R  data-translate.R  diagnostics.R  emmeans.R  explain.R  extendr-wrappers.R  fit-lmm.R  glmm-inference.R  glmm.R  inference-options.R  inference.R  interrupt.R  json.R  manifest.R  marginal.R  methods-extract.R  methods-print.R  methods-summary.R  mixeff-package.R  mm-control.R  parameterization.R  parity-ledger.R  parse-formula.R  predict.R  random-options.R  reporting.R  revive.R  roles.R  schema.R  simulate.R  update.R  verify-convergence.R  (+1 more)
articles/: benchmarking.html  benchmarking.md  demystifying-formulas.html  demystifying-formulas.md  glmm.html  glmm.md  index.html  index.md  inference-method-glossary.html  inference-method-glossary.md  inference-where-lme4-says-no.html  inference-where-lme4-says-no.md  inference.html  inference.md  intro.html  intro.md  lme4-migration.html  lme4-migration.md  lmm-basics.html  lmm-basics.md  marginal-effects.html  marginal-effects.md  mixeff.html  mixeff.md  reporting-lmms.html  reporting-lmms.md  reproducing-aphantasia.html  reproducing-aphantasia.md  saving-and-reviving.html  saving-and-reviving.md  tutorial.html  tutorial.md
examples/: README.md  lme4-standard-datasets.R  sdamr-lme4-companion.R
inst/: LICENSE.note
man/: anova.mm_glmm.Rd  as_json.Rd  audit.Rd  audit_design.Rd  bootstrap_control.Rd  changes.Rd  compare.Rd  compare_covariance.Rd  compile_model.Rd  confint.mm_glmm.Rd  contrast.Rd  df_for_contrast.Rd  diagnostics.Rd  drop1.mm_glmm.Rd  drop1.mm_lmm.Rd  emmeans-support.Rd  estimability.Rd  explain_model.Rd  fit_handle_alive.Rd  getME.Rd  glmm.Rd  inference_options.Rd  inference_table.Rd  is_singular.Rd  lmm.Rd  mixeff-package.Rd  mm-conditions.Rd  mm_broom.Rd  mm_control.Rd  mm_formula_manifest.Rd  mm_grid.Rd  mm_json_known_schemas.Rd  mm_json_negotiate.Rd  mm_lincomb.Rd  mm_lmm-methods.Rd  mm_negative_binomial.Rd  mm_parse_formula.Rd  model_report.Rd  optimizer_certificate.Rd  parameterization.Rd  (+15 more)
news/: index.html  index.md
planning/: HANDOFF.md  PRD.md  bootstrap-positioning.md  bootstrap-uptake-plan.md  bootstrap_fixed_effect_payload_surface.md  functional-equivalence-plan.md  mission.md  (+11 more)
src/rust/: Cargo.toml  document.rs  vendor-config.toml
src/rust/src/: data.rs  lib.rs
(+456 files in other folders)
