[package]
name = 'mixeff'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.78'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'mixeff'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'

# `serde_json` is the wire format for every artifact crossing the bridge.
# The upstream `mixeff-rs` crate already pins `serde` and `serde_json`, so
# adding the dep here only adds a feature surface for our own glue (no new
# version pinning is introduced for transitive crates).
serde_json = '1'
nalgebra = '0.33'

# rand is transitively pulled in by mixeff_rs::parametricbootstrap; we
# instantiate StdRng for seed-reproducible bootstrap runs.
rand = '0.8'

# The crate is bundled as a pinned snapshot under upstream/mixeff-rs by
# tools/vendor-rust.R (PINNED_REV is the committed source of truth).
#
# `unstable-internals` unlocks the `compiler` module and the inference-row /
# test-method enums that the R bridge serializes. mixeff-rs gates these
# behind this opt-in feature as its 1.0 SemVer escape hatch (see its
# docs/semver_policy.md) so IR/internal churn is not a SemVer-major break;
# enabling it is the upstream-sanctioned integration path, not a private
# reach-in. (`fixed_effect_fitted()`, used by the bridge, is now stable
# default-API upstream and needs no feature gate.)
mixeff-rs = { path = 'upstream/mixeff-rs', default-features = false, features = ['unstable-internals'] }

[profile.release]
lto = true
codegen-units = 1
